// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Board should render correctly 1`] = `
<div
  className="board"
  id=""
>
  <h2>
    fsdfsdf
  </h2>
  Hello Jest!
</div>
`;

exports[`Board should render correctly with btnInTitle 1`] = `
<div
  className="board"
  id=""
>
  <div
    className="clearfix titleWithButton"
  >
    <h2>
      Hello World!
    </h2>
    <Button
      ghost={false}
      loading={false}
      prefixCls="ant-btn"
    >
      Foo Bar
    </Button>
  </div>
  Hello Jest!
</div>
`;
